force-app/main/default/objects/Opportunity_Pipeline_Item__c/Opportunity_Pipeline_Item__c.object-meta.xml
<CustomObject>
    <description>This object stores amount of each opportunity for all months from its create date to its close date.</description>
    <label>Opportunity Pipeline Item</label>
    <nameField>
        <displayFormat>OPI-{0000}</displayFormat>
        <label>Opportunity Pipeline Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Pipeline Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>