force-app/main/default/objects/Opportunity_Pipeline_Item__c/fields/GL_Account_Variable__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Opportunity Pipeline Items</relationshipLabel>
    <relationshipName>Opportunity_Pipeline_Items</relationshipName>
    <type>Lookup</type>
</CustomField>