force-app/main/default/objects/Opportunity_Pipeline_Item__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <referenceTo>Sales_Rep__c</referenceTo>
    <relationshipLabel>Opportunity Pipeline Items</relationshipLabel>
    <relationshipName>Opportunity_Pipeline_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>